# financial_analysis_crew

./: .env.example  README.md  crew.py  main.py  pyproject.toml
config/: agents.yaml  tasks.yaml
