[tool.poetry]
name = "financial-analysis"
version = "0.1.0"
description = ""
authors = ["ZTZ <tzamirov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
crewai = {extras = ["tools"], version = "^0.30.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
